--- a/Win_Lose.ipynb
+++ b/Win_Lose.ipynb
@@ -133,7 +133,7 @@
     "    if a == 1:\n",
     "        \n",
     "        if winner == 'tie':\n",
-    "            return computer_move\n",
+    "            return human_move\n",
     "        \n",
     "        elif winner == 'computer':\n",
     "            return computer_move\n",
@@ -146,7 +146,7 @@
     "    else:\n",
     "        \n",
     "        if winner == 'tie':\n",
-    "            return computer_move\n",
+    "            return human_move\n",
     "        \n",
     "        elif winner == 'computer':\n",
     "            return human_move\n",
